<resources>
    <string name="app_name">Let\'s Plant</string>

    <string name="skip">skip</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="home">Home</string>
    <string name="my_plants">My Plants</string>
    <string name="settings">Settings</string>
    <string name="discover">Discover</string>
    <string name="today">Today</string>

    <string name="to_do_list">to-do list</string>
    <string name="reminders">reminders</string>
    <string name="reminders_">Reminders</string>
    <string name="upcoming">upcoming</string>
    <string name="add_reminder">add reminder</string>
    <string name="indoor_plants">Indoor Plants</string>
    <string name="outdoor_plants">Outdoor Plants</string>
    <string name="plants_care">Plants Care</string>
    <string name="back">back</string>
    <string name="share">share</string>
    <string name="internet_not_available">Internet not available!</string>
    <string name="request_failure">Something went wrong.\nPlease try again.</string>
    <string name="retry">Retry</string>
    <string name="no_items">No items!</string>

    <!--    Plant Details -->
    <string name="plant_overview">Plant Overview</string>
    <string name="light">Light</string>
    <string name="watering">Watering</string>
    <string name="temperature">Temperature</string>
    <string name="soil">Soil</string>
    <string name="propagation">Propagation</string>

    <!--    sharing -->
    <string name="send_to">Send to</string>
    <string name="select_your_language">Select your language</string>
    <string name="language">Language: %s</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="app_version">App Version: %s</string>
    <string name="_continue">Continue</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="empty_email_msg">Enter your email!</string>
    <string name="wrong_email_msg">Wrong email!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="empty_password_msg">Enter your password!</string>
    <string name="password_length_msg">Password should be at least 6 characters!</string>
    <string name="confirm_password_not_match">Password is not matching!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="no_account">No account?</string>
    <string name="general">General</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="add_new_plant">Add new plant</string>
    <string name="plant_name">Plant Name</string>
    <string name="add_plant">Add Plant</string>
    <string name="repeat_watering_title">Repeat watering after\u0020</string>
    <string name="repeat_fertilize_title">Repeat fertilizing after\u0020</string>
    <string name="days">\u0020days.</string>
    <string name="repeat_watering_title_">Water every:\u0020\n</string>
    <string name="repeat_fertilize_title_">Fertilize every:\u0020\n</string>
    <string name="water_plant_">Water plant: %s</string>
    <string name="fertilize_plant_">Fertilize plant: %s</string>
    <string name="mark_as_done">Mark as done</string>

    <!--    Reminder Notifications -->
    <string name="notification_title_water">Water plant</string>
    <string name="notification_text_water">Your plant: %s needs to be watered!</string>
    <string name="notification_title_fertilize">Fertilize plant</string>
    <string name="notification_text_fertilize">Your plant: %s needs to be fertilized!</string>
</resources>